welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:12: error: type mismatch;
 found   : Unit
 required: Boolean
while(nbBiscuit=4){
               ^RunFour:13: error: not found: value NULL
	NULL();
        ^